<resources xmlns:jjkeller="http://schemas.android.com/tools">
    <string name="hello">Hello World, AbstractDBAdapter!</string>
    <string name="app_name_api">JJKMobileAPI</string>
    <string name="notification_title">KellerMobile&#8482;</string>
	<string name="msgelddisconnected">ELD Disconnected</string>
	<string name="msgelddisconnected2">ELD %1$s Disconnected</string>
	<string name="msgeldonline">ELD %1$s Online</string>
	<string name="msgeldreadinghistory">ELD %1$s Reading History</string>
	<string name="msgelddevicefailure">ELD Device Failure</string>
	<string name="msgeldfirmwareupdate">ELD %1$s Firmware Update</string>
	<string name="msgsomelocationsaremissing"> - **Some locations are missing.</string>
	<string name="msgtimecannotbechanged">The time can not be changed because Driving time will be effected.</string>
	<string name="msgnewtimecannotbenewerthatcurrenteventime">New time %1$s cannot be newer than current event time on log of %2$s.</string>
	<string name="msgnewtimemustbenewerthanpreveventtime">New time %1$s must be newer than previous event time of %2$s.</string>
	<string name="msgnewtimemustbenewerthanlogstarttime">New time %1$s must be newer than log start time of %2$s.</string>
	<string name="msgnewtimecannotbeearlierthancurrenteventime">New time %1$s cannot be the same or earlier than current event time on log of %2$s.</string>
	<string name="msgnewtimecannotbenewerthancurrenttime">New time %1$s cannot be newer than current time of %2$s.</string>
	<string name="msglogincontroller_failedtosubmitdutyhoursavailable">LoginController.PerformLogout: Failed to submit Duty Hours Available.</string>
	<string name="msgeobrservice_connected">EobrService Connected</string>
	<string name="msgeobrservice_disconnected">EobrService Disconnected</string>
    <string name="msgeobrservice_readhistorycomplete">EobrReader read driving history complete.  Num records found: %1$d</string>
     <string name="newline">\r\n</string>
    <string name="errorlog_headerseparator">------</string>
    <string name="errorlog_errorrecordedat">Error recorded at:</string>
    <string name="errorlog_messagerecordedat">Message recorded at:</string>
    <string name="errorlog_noexceptionprovided">No Exception object has been provided.</string>
    <string name="errorlog_exceptioninfolabel">Exception Information</string>
    <string name="errorlog_stacktraceinfolabel">StackTrace Information</string>
    <string name="errorlog_textseparator">*********************************************</string>
    <string name="errorlog_messagelabel">Message:</string>
    <string name="errorlog_causelabel">Cause:</string>
    <string name="errorlog_additionalinfolabel">Additional Information</string>
    <string name="errorlog_systemstartupmessage">SystemStartupController.PerformSystemStartup complete numEobrs \'%1$s\' activatedEobr \'%2$s\' isDatabaseOk \'%3$s\'</string>
    <string name="errorlog_searchforeobrfailed">EobrDevice.SearchForEobrDevices failed. RC: \'%1$s\' mode: \'%2$s\' companyPassKey: \'%3$s\'</string>
    <string name="errorlog_searchforeobrmacaddressfailed">EobrDevice.SearchForEobrDevices failed. RC: \'%1$s\' macAddress: \'%2$s\' companyPassKey: \'%3$s\'</string>
    <string name="errorlog_eobronline">EOBR \'%1$s\' Online %2$s</string>
    <string name="errorlog_eobroffline">EOBR \'%1$s\' Offline %2$s</string>
    <string name="errorlog_eobrreadinghistory">EOBR \'%1$s\' Reading History %2$s</string>
    <string name="errorlog_eobrfirmwareupdate">EOBR \'%1$s\' Firmware Update: \'%2$s\'</string>
    <string name="errorlog_eobrdevicefailure">EOBR \'%1$s\' Device Failure occurred: \'%2$s\'</string>
	<string name="errorlog_setclockbadreturncode">SetClockUniversalTime: bad return code \'%1$s\'</string>
	<string name="errorlog_initializeeobrmessage">InitializeEobrDevice: deviceName \'%1$s\' commMode: \'%2$s\'</string>
	<string name="errorlog_initializeeldexception">InitializeELDDevice: device \'%1$s\' exception occurred \'%2$s\'</string>
	<string name="errorlog_initializeeldfailedmessage">Initialization of ELD device failed. RC(%1$s)</string>
	<string name="errorlog_intializeeldfailed">Initialization of ELD device (%1$s) failed.</string>
	<string name="errorlog_readserialnumberfailed_eld">Read of ELD Serial Number failed. RC(%1$s)</string>
    <string name="errorlog_eobrshutdown">EOBR \'%1$s\' Shutdown: \'%2$s\'</string>
    <string name="erorrLog_readconsolelogfailed_eld">Read of ELD Console log failed. RC(%1$s)</string>
    <string name="at">at</string>
    <string name="exception_serviceunavailable">Service is unavailable.\r\nTry again later.</string>
    <string name="exception_webservicecommerror">Web service comm exception</string>
    <string name="exception_loadeobrdevice">Error occurred loading EobrReader.Current: </string>
    <string name="errorlog_logincontrollerlogout">LoginController.PerformLogout()</string>
    <string name="errorlog_logincontrollerreadonlylogout">LoginController.PerformReadOnlyLogout()</string>
    <string name="downloademployeelogs">DownloadEmployeeLogs</string>
    <string name="updateunidentifiedevents">UpdateUnidentifiedEvents</string>
    <string name="submitlocallogstodmo">SubmitLocalLogsToDMO</string>
    <string name="submitlocalreassignmentstodmo">SubmitLocalReassignmentsToDMO</string>
    <string name="reversegeocodelocation">ReverseGeocodeLocation</string>
    <string name="getlocalemployeelogorcreatetransition">GetLocalEmployeeLogOrCreateTransition</string>
    <string name="submitenginerecordstodmo">SubmitEngineRecordsToDMO</string>
    <string name="submittriprecordstodmo">SubmitTripRecordsToDMO</string>
    <string name="submiteventdatarecordstodmo">SubmitEventDataRecordsToDMO</string>
    <string name="downloadconfigfromdmo">DownloadConfigFromDMO</string>
    <string name="gettractornumberfromdmo">GetTractorNumberFromDMO</string>
    <string name="downloadeobrdiagnosiccommandfromdmo">DownloadEobrDiagnosticCommandFromDMO</string>
    <string name="submiteobrconfigurationstodmo">SubmitEobrConfigurationsToDMO</string>
    <string name="submiteobrdiagnosticcommandstodmo">SubmitEobrDiagnosticCommandsToDMO</string>
    <string name="createsummariestosend">CreateSummariesToSend</string>
    <string name="submithoursummariestodmo">SubmitHourSummariesToDMO</string>
    <string name="downloadlocationcodes">DownloadLocationCodes</string>
    <string name="downloadlogcheckercompliancedates">DownloadLogCheckerComplianceDates</string>
    <string name="downloadcompanyconfigsettings">DownloadCompanyConfigSettings</string>
    <string name="alkpackage">com.jjkeller.kmb.alk</string>
    <string name="authenticateuser">AuthenticateUser</string>
    <string name="setencompassdatatransfermechanismstatus">SetEncompassDataTransferMechanismStatus</string>
    <string name="getencompassdatatransfermechanismstatus">GetEncompassDataTransferMechanismStatus</string>
    <string name="submitroutepositionstodmo">SubmitRoutePositionsToDMO</string>
    <string name="downloademployeename">DownloadEmployeeName</string>
    <string name="submitunassignedperiodstodmo">SubmitUnassignedPeriodsToDMO</string>
 	<string name="timeoffsetkind_now">Now</string>
	<string name="timeoffsetkind_15minutes">15 Minutes</string>
	<string name="timeoffsetkind_30minutes">30 Minutes</string>
	<string name="timeoffsetkind_1hour">1 Hour</string>
	<string name="timeoffsetkind_exacttime">Exact time</string>
	<string name="ascending">Ascending</string>
	<string name="downloademployeerules">DownloadEmployeeRules</string>
    <string name="downloadmotionpictureauthorities">DownloadMotionPictureAuthorities</string>
    <string name="downloadmotionpictureproductions">DownloadMotionPictureProductions</string>
    <string name="downloadUnassignedDrivingPeriods">DownloadUnassignedDrivingPeriods</string>
    <string name="downloadUnidentifiedELDEvents">DownloadUnidentifiedELDEvents</string>
    <string name="recordConditionalFirmwareUpgrade">RecordConditionalFirmwareUpgrade</string>
	<string name="checkingdatabase">Checking database...</string>
	<string name="loadingdriver">Loading driver...</string>
	<string name="devicediscovery">Device discovery...</string>
	<string name="devicename">DeviceName</string>
	<string name="numberdevices">NumberDevices</string>
	<string name="databaseok">DatabaseOK</string>
	<string name="performdevicediscovery">PerformDeviceDiscovery</string>
	<string name="usb">usb</string>
	<string name="usb_bt">usb_bt</string>
	<string name="bt">bt</string>
  <string name="alldevices">All Devices</string>
    <string name="rc">rc</string>
	<string name="returnvalue">ReturnValue</string>
	<string name="array">Array</string>
	<string name="setclockuniversaltime">SetClockUniversalTime</string>
	<string name="initialize">Initialize</string>
	<string name="getserialnumber">GetSerialNumber</string>
	<string name="getcurrentdata">GetCurrentData</string>
  <string name="searchforeobrdevices">SearchForEobrDevices</string>
	<string name="clocktimestamputc">ClockTimestampUTC:</string>
	<string name="serialnumber">SerialNumber</string>
	<string name="recordid">recordid</string>
	<string name="timestamputc">timestamputc</string>
	<string name="overallstatus">overallstatus</string>
	<string name="isengineon">isengineon</string>
	<string name="speedometerreading">speedometerreading</string>
	<string name="odometerreading">odometerreading</string>
	<string name="tachometer">tachometer</string>
	<string name="gpstimestamputc">gpstimestamputc</string>
	<string name="gpslatitude">gpslatitude</string>
	<string name="gpslongitude">gpslongitude</string>
	<string name="northsouthind">northsouthind</string>
	<string name="eastwestind">eastwestind</string>
	<string name="communicationsmode">CommunicationsMode:</string>
	<string name="companypasskey">CompanyPassKey:</string>
	<string name="kmbeobrrequest">kmbeobrrequest</string>
	<string name="kmbeobrresponse">kmbeobrresponse</string>
	<string name="testconnection">TestConnection</string>
	<string name="cddeferral_none">None</string>
	<string name="cddeferral_dayone">Day One</string>
	<string name="cddeferral_daytwo">Day Two</string>
	<string-array name="cddeferral_array">
		<item>@string/cddeferral_none</item>
		<item>@string/cddeferral_dayone</item>
		<item>@string/cddeferral_daytwo</item>
	</string-array>
	<string name="eobrcommunicationmode_null">Null</string>
	<string name="eobrcommunicationmode_usb">USB</string>
	<string name="eobrcommunicationmode_bt">BT</string>
	<string name="eobrcommunicationmode_usb_bt">USB_BT</string>
	<string-array name="eobrcommunicationmode_array">
		<item>@string/eobrcommunicationmode_null</item>
		<item>@string/eobrcommunicationmode_usb</item>
		<item>@string/eobrcommunicationmode_bt</item>
		<item>@string/eobrcommunicationmode_usb_bt</item>
	</string-array>
  <string name="drivertype_null">Null</string>
  <string name="drivertype_passengercarrying">Passenger</string>
  <string name="drivertype_propertycarrying">Property</string>
  <string-array name="drivertype_array">
   <item>@string/drivertype_null</item>
   <item>@string/drivertype_passengercarrying</item>
   <item>@string/drivertype_propertycarrying</item>
  </string-array>
    <string name="support_contact_header">Contact Us</string>
    <string name="support_contact_website_label">Support Center:</string>
    <string name="support_contact_website">https://support.jjkeller.com/Encompass_and_KellerMobile</string>
    <string name="support_contact_email_label">Support Email:</string>
    <string name="support_contact_email">jjkellermobilesupport@jjkeller.com</string>
    <string name="support_contact_phone_label">Support Number:</string>
    <string name="support_contact_phone">(855) 215-3637</string>
</resources>