<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/FragmentStyle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <TextView
        style="@style/Theme.TextViewBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_contact_header"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/support_contact_website_label"/>
    <TextView
        android:id="@+id/support_contact_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/support_contact_website"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/support_contact_email_label"/>
    <TextView
        android:id="@+id/support_contact_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/support_contact_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/support_contact_phone_label"/>
    <TextView
        android:id="@+id/support_contact_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/support_contact_phone"/>


</LinearLayout>